k8s/mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: eurowise
spec:
  selector:
    app: mysql
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
